--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 ## Build generated
 build/
 DerivedData/
-.DS_Store
+*.DS_Store
 
 ## Various settings
 *.pbxuser
@@ -41,7 +41,7 @@ xcuserdata/
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
 
-#Carthage/Build
+# Carthage/Build
 
 # fastlane
 #
